--- a/TojoMobile/projects/TJTeamListViewController.xib
+++ b/TojoMobile/projects/TJTeamListViewController.xib
@@ -40,7 +40,8 @@
                                     <exclude reference="fiu-AI-G2n"/>
                                 </mask>
                             </variation>
-                            <variation key="heightClass=regular-widthClass=compact">
+                            <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                <rect key="frame" x="205" y="0.0" width="196" height="49"/>
                                 <mask key="constraints">
                                     <include reference="OPB-5q-TrV"/>
                                     <exclude reference="fiu-AI-G2n"/>
