--- a/TojoMobile/projects/TJTeamListViewController.xib
+++ b/TojoMobile/projects/TJTeamListViewController.xib
@@ -41,12 +41,15 @@
                                 </mask>
                             </variation>
                             <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                <rect key="frame" x="205" y="0.0" width="196" height="49"/>
+                                <rect key="frame" x="204" y="0.0" width="196" height="49"/>
                                 <mask key="constraints">
                                     <include reference="OPB-5q-TrV"/>
                                     <exclude reference="fiu-AI-G2n"/>
                                 </mask>
                             </variation>
+                            <connections>
+                                <action selector="attendByOneself:" destination="-1" eventType="touchUpInside" id="2Q7-y0-jr8"/>
+                            </connections>
                         </button>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="points.png" translatesAutoresizingMaskIntoConstraints="NO" id="kGW-MK-Ika">
                             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
@@ -88,6 +91,9 @@
                                     <include reference="uYc-qg-2ZB"/>
                                 </mask>
                             </variation>
+                            <connections>
+                                <action selector="createTeam:" destination="-1" eventType="touchUpInside" id="V8s-jp-ybp"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.1176470588" green="0.76470588240000004" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
